# kjze_challenge_TelecomX_2_AlluraLatam

./: README.md  TelecomX_2_LATAM.ipynb  pyproject.toml
