[project]
name = "telecomx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "imbalanced-learn>=0.12.4",
    "matplotlib>=3.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
